<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E8EAF6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_title"
            android:textColor="#0F4D92"
            android:textStyle="bold"
            android:inputType="textCapWords"
            android:textSize="24dp"/>

        <AutoCompleteTextView
            android:id="@+id/expense_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            >

            <requestFocus />
        </AutoCompleteTextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_amount"
            android:textStyle="bold"
            android:textColor="#0F4D92"
            android:paddingTop="10dp"
            android:layout_marginTop="20dp"
            android:textSize="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/expense_amount_editor"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="0123456789.,"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_payer"
            android:textColor="#0F4D92"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:textSize="24dp"/>

        <TextView
            android:id="@+id/expense_payer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingTop="5dp"
            android:text="@string/expense_payer_prompt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_date"
            android:textColor="#0F4D92"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:layout_marginTop="17dp"
            android:textSize="24dp"/>

        <TextView
            android:id="@+id/expense_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp" />

        <CheckBox
            android:id="@+id/custom_split"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_split"
            android:paddingTop="5dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:paddingBottom="4dp"/>

        <TableLayout
            android:id="@+id/expense_split_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</ScrollView>